--- a/shadowdrawable/src/main/AndroidManifest.xml
+++ b/shadowdrawable/src/main/AndroidManifest.xml
@@ -1,2 +1,2 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.sxu.shadowdrawable"/>
+    package="com.hxb.shadowdrawable" />
